--- a/main.css
+++ b/main.css
@@ -10,6 +10,11 @@
   --mb1: 2.5rem;
 }
 
+body {
+  transition-duration: 100ms;
+  transition-timing-function: ease;
+}
+
 main {
   max-width: 750px;
   margin: 0 auto;
@@ -39,17 +44,22 @@ section {
 
 p {
   line-height: 1.54em;
-}
 
-a,
-u {
-  color: currentColor;
+}
+u:not([class]), 
+a:not([class]) {
+  color: currentColor; 
   text-decoration: none;
+  background-image: linear-gradient(transparent calc(100% - .05em), currentColor 2px);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 100% 100%;
+  transition: background-size 300ms ease;
 }
 
-a:hover,
-u:hover {
-  text-decoration: underline;
+u:not([class]):hover,
+a:not([class]):hover {
+  animation: 500ms both ease underline
 }
 
 td {
@@ -63,9 +73,21 @@ footer {
   margin-bottom: var(--mb1);
 }
 
-@media (hover: none) {
-  a,
-  u {
-    text-decoration: underline;
+@keyframes underline {
+  0% {
+    background-size: 100% 100%;
+    background-position: right;
+  }
+  49% {
+    background-size: 0% 100%;
+    background-position: right;
+  }
+50% {
+    background-size: 0% 100%;
+    background-position: left;
+  }
+  100% {
+    background-size: 100% 100%;
+    background-position: left;
   }
 }
