--- a/main.css
+++ b/main.css
@@ -11,9 +11,9 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   transition-duration: 100ms;
-  margin: 0
-  padding: 0
   transition-timing-function: ease;
 }
 
@@ -80,20 +80,32 @@ footer {
   margin-bottom: var(--mb1);
 }
 
-[henryfound] {
+code {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+code::before {
+  content: "";
+  position: absolute;
+  height: 100%; 
+  width: 100%;
+}
+
+[found] {
   display: none;
 }
 
-[henryhidden] {
-  position: relative
+[hidden] {
   display: inline-block;
 }
 
-[henryhidden]:hover {
+[hidden]:hover {
   display: none;
 }
 
-[henryhidden]:hover + [henryfound] {
+[hidden]:hover + [found] {
   display: inline-block;
 }
 
